--- a/Valentin/index.html
+++ b/Valentin/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&family=Outfit:wght@600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
     <title>FEEDBACK PAGE</title>
   </head>
   <body>
-    <main>
-      <header><img class="logo-v" src="./assets/epicode_logo.png" alt="logo" /></header>
+    <header><img class="logo-v" src="./assets/epicode_logo.png" alt="logo" /></header>
+    <main class="inter-main">
       <div>
-        <h1>Tell us how it's going</h1>
+        <h1 class="outfit-title">Tell us how it's going</h1>
         <p class="p1-v">From 0 to 10, how likely are you to recommend EPICODE to a friend or a colleague?</p>
       </div>
       <div class="parent-div-v">
@@ -96,10 +99,10 @@
         </div>
       </div>
       <div>
-        <p>Leave us an open feedback about your experience so far</p>
-        <form action="">
-          <input type="text" name="" id="" placeholder="Write your comment here" />
-          <button>MORE INFO</button>
+        <p class="p1-v">Leave us an open feedback about your experience so far</p>
+        <form id="review-form">
+          <input class="input-form" type="text" name="review" id="input-form" placeholder="Write your comment here" />
+          <button class="button-form" type="submit">MORE INFO</button>
         </form>
       </div>
     </main>
