--- a/Melanie/indexM.html
+++ b/Melanie/indexM.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets(1)/styleM.css" />
+    <link rel="stylesheet" href="./assets/styleM.css" />
     <title>Benchmark</title>
   </head>
   <body>
     <div id="logo">
-      <img
-        src="./assets(1)/epicode_logo.png"
-        width="200px;"
-        alt="logo epicode"
-      />
+      <img src="./assets/epicode_logo.png" width="200px;" alt="logo epicode" />
     </div>
-    <div id="countdown">60</div>
+    <div id="countdown">
+      <p>
+        SECONDS <br />
+        <span id="seconds">60</span> <br />REMAINING
+      </p>
+    </div>
     <div id="questionsContainer">
       <h1>Domanda 1</h1>
       <button id="risposta1">Clicca qui</button>
