timer added, answer js fixed

--- a/Melanie/indexM.html
+++ b/Melanie/indexM.html
@@ -11,9 +11,18 @@
       <img src="./assets/epicode_logo.png" width="200px;" alt="logo epicode" />
     </div>
     <div id="countdown">
+      <svg class="progress-ring" width="150" height="150">
+        <circle
+          class="progress-ring__background"
+          cx="75"
+          cy="75"
+          r="70"
+        ></circle>
+        <circle class="progress-ring__circle" cx="75" cy="75" r="70"></circle>
+      </svg>
       <p>
-        SECONDS <br />
-        <span id="seconds">60</span> <br />REMAINING
+        SECONDS <br /><br />
+        <span id="seconds">60</span><br /><br />REMAINING
       </p>
     </div>
     <div id="questionsContainer">
