--- a/Melanie/benchmark.html
+++ b/Melanie/benchmark.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/styleM.css" />
+    <link rel="stylesheet" href="./assets/benchmark.css" />
     <title>Benchmark</title>
   </head>
   <body>
@@ -33,6 +33,6 @@
       <button id="risposta4">Clicca qui</button>
       <h2>QUESTION 1 <span> /10</span></h2>
     </div>
-    <script src="./scriptM.js"></script>
+    <script src="./benchmark.js"></script>
   </body>
 </html>
