--- a/resultsPage.html
+++ b/resultsPage.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/styleC.css" />
-    <title>Result Page</title>
+    <link rel="stylesheet" href="./assets/css/results.css" />
+    <title>Results Page</title>
   </head>
   <body>
     <header class="headerC">
       <img class="logoC" src="./assets/img/epicode_logo.png" alt="questo è il logo di epicode" />
     </header>
     <main>
+
+      <div class="Corinne">
       <div class="heroC">
         <h1 class="h1HeroC">Results</h1>
         <p class="pHeroC">The summary of your answers</p>
@@ -19,30 +21,33 @@
       <div class="grapichresults">
         <div class="resultLeftC">
           <h2>Correct</h2>
-          <h2 id="percCorretteC">66.7%</h2>
-          <p id="pQuestionsCorrectC">4/6questions</p>
+          <h2 id="percCorretteC"></h2>
+          <p id="pQuestionsCorrectC"></p>
         </div>
 
         <div class="grapichC">
           <div class="contentGrapichC">
-            <p id="pTitleC">Congratulation!</p>
-            <p id="pSubtitleC">You passed the exam</p>
-            <p id="certificateC"> We'll sendyou the certificate in few minutes</p>
-            <p id="emailCertificateC"> Check your email(including promotions/spam folder)</p>
+            <p id="pTitleC"></p>
+            <p id="pSubtitleC"></p>
+            <p id="certificateC"></p>
+            <p id="emailCertificateC"></p>
          </div>
         </div>
 
         <div class="resultRightC">
           <h2>Wrong</h2>
-          <h2 id="percWrongC"> 33.3%</h2>
-          <p id="pQuestionsWrongC">2/6questions</p>
+          <h2 id="percWrongC"></h2>
+          <p id="pQuestionsWrongC"></p>
         </div>
       </div>
 
       <div class="divButtonC">
         <button id="buttonC">RATE US</button>
       </div>
+
+    </div>
+
     </main>
-    <script src="./assets/js/scriptC.js"></script>
+    <script src="./assets/js/results.js"></script>
   </body>
 </html>
