css unifiato e corretto

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
   <body>
     <header>
     <div id="logo">
-      <img src="./assets/Melanie/assets/epicode_logo.png" width="200px;" alt="logo epicode" />
+      <img src="./assets/Melanie/assets/epicode_logo.png" width="170px;" alt="logo epicode" />
     </div>
 </header>
 <main>
@@ -59,7 +59,7 @@
             <p id="pTitleC"></p>
             <p id="pSubtitleC"></p>
             <p id="certificateC"> </p>
-            <p id="emailCertificateC"></p>
+            <!-- <p id="emailCertificateC"></p> -->
          </div>
         </div>
 
