--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
     </div>
 </header>
 <main>
-    <div class="Melanie">
+    <div class="benchmarkPage">
     <div id="countdown">
       <svg class="progress-ring" width="150" height="150">
         <circle
@@ -40,7 +40,7 @@
     </div>
 </div>
 
-<div class="Corinne hidden ">
+<div class="resultsPage hidden ">
     <div class="heroC">
         <h1 class="h1HeroC">Results</h1>
         <p class="pHeroC">The summary of your answers</p>
