--- a/feedback.html
+++ b/feedback.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&family=Outfit:wght@600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./feedback-style.css" />
     <title>FEEDBACK PAGE</title>
   </head>
   <body>
@@ -106,6 +106,6 @@
         </form>
       </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./feedback-script.js"></script>
   </body>
 </html>
