bechmark+result+feedback

--- a/feedback.html
+++ b/feedback.html
@@ -6,11 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&family=Outfit:wght@600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./feedback-style.css" />
+    <link rel="stylesheet" href="./css/feedback-style.css" />
     <title>FEEDBACK PAGE</title>
   </head>
   <body>
-    <header><img class="logo-v" src="./assets/epicode_logo.png" alt="logo" /></header>
+    <header><img class="logo-v" src="./asset/epicode_logo.png" alt="logo" /></header>
     <main class="inter-main">
       <div>
         <h1 class="outfit-title">Tell us how it's going</h1>
@@ -106,6 +106,6 @@
         </form>
       </div>
     </main>
-    <script src="./feedback-script.js"></script>
+    <script src="./js/feedback-script.js"></script>
   </body>
 </html>
