--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="divButtonC">
-          <button id="buttonC">RATE US</button>
+          <a href="./feedback.html"><button id="buttonC">RATE US</button></a>
         </div>
       </div>
     </main>
