--- a/welcome-page.html
+++ b/welcome-page.html
@@ -31,7 +31,7 @@
     </div>
     <div class="checkbox-container">
       <label class="custom-checkbox">
-        <input type="checkbox" id="myCheckbox" />
+        <input type="checkbox" id="myCheckbox" required />
         <span class="checkmark"></span>
         <p>I promise to answer myself without help from anyone</p>
       </label>
