--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
       <div class="benchmarkPage">
         <div id="countdown">
           <svg class="progress-ring" width="150" height="150">
-            <circle class="progress-ring__background" cx="75" cy="75" r="70"></circle>
-            <circle class="progress-ring__circle" cx="75" cy="75" r="70"></circle>
+            <circle
+              class="progress-ring__background"
+              cx="75"
+              cy="75"
+              r="70"
+            ></circle>
+            <circle
+              class="progress-ring__circle"
+              cx="75"
+              cy="75"
+              r="70"
+            ></circle>
           </svg>
           <p>
             SECONDS <br /><br />
