eliminato table cambiati p per non sovrascrivere

--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
       <div class="resultsPage hidden">
         <div class="heroC">
           <h1 class="h1HeroC">Results</h1>
-          <p class="pHeroC">The summary of your answers</p>
+          <h6 class="h6HeroC">The summary of your answers</h6>
         </div>
         <div class="grapichresults">
           <div class="resultLeftC">
-            <h2>Correct</h2>
-            <h2 id="percCorretteC"></h2>
-            <p id="pQuestionsCorrectC"></p>
+            <h3 class="titleCorC">Correct</h3>
+            <h3 id="percCorretteC"></h3>
+            <h6 id="pQuestionsCorrectC"></h6>
           </div>
 
           <div class="wrapperC">
             <div class="grapichC"></div>
             <div class="contentGrapichC">
-              <p id="pTitleC"></p>
-              <p id="pSubtitleC"></p>
-              <p id="certificateC"></p>
+              <h6 id="pTitleC"></h6>
+              <h6 id="pSubtitleC"></h6>
+              <h6 id="certificateC"></h6>
               <!-- <p id="emailCertificateC"></p> -->
             </div>
           </div>
 
           <div class="resultRightC">
-            <h2>Wrong</h2>
-            <h2 id="percWrongC"></h2>
-            <p id="pQuestionsWrongC"></p>
+            <h3 class="titleWroC">Wrong</h3>
+            <h3 id="percWrongC"></h3>
+            <h6 id="pQuestionsWrongC"></h6>
           </div>
         </div>
 
