--- a/welcome-page.html
+++ b/welcome-page.html
@@ -34,6 +34,7 @@
         <input type="checkbox" id="myCheckbox" required />
         <span class="checkmark"></span>
         <p>I promise to answer myself without help from anyone</p>
+        <p>Grazie per aver lasciato una review</p>
       </label>
       <button id="proceedButton">PROCEED</button>
     </div>
