--- a/feedback.html
+++ b/feedback.html
@@ -101,8 +101,9 @@
       <div>
         <p class="p1-v">Leave us an open feedback about your experience so far</p>
         <form id="review-form">
-          <input class="input-form" type="text" name="review" id="input-form" placeholder="Write your comment here" />
-          <button class="button-form" type="submit">MORE INFO</button>
+          <input class="input-form" type="text" name="review" id="input-form" placeholder="Write your comment here" required />
+          <p class="p2-v hidden" id="par">Grazie per aver lasciato una review</p>
+          <button class="button-form" type="submit">SUBMIT</button>
         </form>
       </div>
     </main>
