--- a/result.html
+++ b/result.html
@@ -8,6 +8,9 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <img  class="logoC" src="./assets/Melanie/assets/epicode_logo.png">
+    </header>
     <main>
       <div class="heroC">
         <h1 class="h1HeroC">Results</h1>
