--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/benchmark.css" />
-    <link rel="stylesheet" href="./css/results.css" />
     <title>Benchmark</title>
   </head>
   <body>
@@ -17,18 +16,8 @@
       <div class="benchmarkPage">
         <div id="countdown">
           <svg class="progress-ring" width="150" height="150">
-            <circle
-              class="progress-ring__background"
-              cx="75"
-              cy="75"
-              r="70"
-            ></circle>
-            <circle
-              class="progress-ring__circle"
-              cx="75"
-              cy="75"
-              r="70"
-            ></circle>
+            <circle class="progress-ring__background" cx="75" cy="75" r="70"></circle>
+            <circle class="progress-ring__circle" cx="75" cy="75" r="70"></circle>
           </svg>
           <p>
             SECONDS <br /><br />
@@ -44,43 +33,7 @@
           <h2>QUESTION 1 <span> /10</span></h2>
         </div>
       </div>
-
-      <div class="resultsPage hidden">
-        <div class="heroC">
-          <h1 class="h1HeroC">Results</h1>
-          <h6 class="h6HeroC">The summary of your answers</h6>
-        </div>
-        <div class="grapichresults">
-          <div class="resultLeftC">
-            <h3 class="titleCorC">Correct</h3>
-            <h3 id="percCorretteC"></h3>
-            <h6 id="pQuestionsCorrectC"></h6>
-          </div>
-
-          <div class="wrapperC">
-            <div class="grapichC"></div>
-            <div class="contentGrapichC">
-              <h6 id="pTitleC"></h6>
-              <h6 id="pSubtitleC"></h6>
-              <h6 id="certificateC"></h6>
-              <!-- <p id="emailCertificateC"></p> -->
-            </div>
-          </div>
-
-          <div class="resultRightC">
-            <h3 class="titleWroC">Wrong</h3>
-            <h3 id="percWrongC"></h3>
-            <h6 id="pQuestionsWrongC"></h6>
-          </div>
-        </div>
-
-        <div class="divButtonC">
-          <a href="./feedback.html"><button id="buttonC">RATE US</button></a>
-        </div>
-      </div>
     </main>
-
-    <script src="./js/benchmark.js"></script>
-    <script src="./js/results.js"></script>
+    <script src="./assets/Melanie/benchmark.js"></script>
   </body>
 </html>
