--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         </div>
       </div>
     </main>
-    <script src="./assets/Melanie/benchmark.js"></script>
+    <script src="./js/benchmark.js"></script>
   </body>
 </html>
