--- a/feedback.html
+++ b/feedback.html
@@ -102,7 +102,7 @@
         <p class="p1-v">Leave us an open feedback about your experience so far</p>
         <form id="review-form">
           <input class="input-form" type="text" name="review" id="input-form" placeholder="Write your comment here" required />
-          <p class="p2-v hidden" id="par">Grazie per aver lasciato una review</p>
+          <p class="p2-v hidden" id="par">Thank you for your review</p>
           <button class="button-form" type="submit">SUBMIT</button>
         </form>
       </div>
