--- a/result.html
+++ b/result.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="divButtonC">
-        <button id="buttonC">RATE US</button>
+        <a href="./feedback.html"><button id="buttonC">RATE US</button></a>
       </div>
     </main>
     <script src="./js/results.js"></script>
